added FirebaseUI dependency, LoginViewModel and custom live data

--- a/app/src/main/res/layout/fragment_login.xml
+++ b/app/src/main/res/layout/fragment_login.xml
@@ -7,6 +7,12 @@
         android:layout_height="match_parent"
         tools:context=".locationreminders.login.LoginFragment">
 
+        <Button
+            android:id="@+id/fragment_login_button"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Login button" />
+
 
     </FrameLayout>
 </layout>
