--- a/app/src/main/res/layout/fragment_save_reminder.xml
+++ b/app/src/main/res/layout/fragment_save_reminder.xml
@@ -52,6 +52,8 @@
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@id/reminderDescription" />
 
+<!--        android:onClick="@{()->viewModel.}"-->
+
         <TextView
             android:id="@+id/selectedLocation"
             android:layout_width="wrap_content"
